--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js">
     </script>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 
     <title>Practica PAD</title>
 </head>
@@ -45,7 +45,7 @@
             </div>
         </div>
     </div>
-    <script src="/js/code.js"></script>
+    <script src="./js/code.js"></script>
 </body>
 
 </html>
