--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js">
     </script>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-
     <title>Practica PAD</title>
 </head>
 
@@ -35,7 +34,7 @@
             <div id="divTarea" class="Tarea">
                 <button id="buttonTarea" class="buttonTarea">Tarea</button>
                 <div class="divModificar">
-                    <input type="text" name="añadirTarea" id="textModificar" class="textModificar" placeholder="Tarea">
+                    <input type="text" name="añadirTarea" class="textModificar" placeholder="Tarea">
                     <div class="buttonsTarea">
                         <button id="eliminarTarea" class="buttonModificarTarea"> Eliminar</button>
                         <button id="guardarTarea" class="buttonModificarTarea"> Guardar</button>
